--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ MYSQL_USERNAME = "user_crud"
 MYSQL_PASSWORD = "root"
 MYSQL_DATABASE = "db_crud"
 MYSQL_SSL = "false"
+JWT_SECRET="no usar esta palabra en produccion"
